# lol-tools

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: long-vod-workflow.md  replay-recording-guide-windows.md  replay-recording-guide.md
docs/adr/: ADR-001-monorepo-structure.md  ADR-002-riot-api-client.md  ADR-003-gemini-video-analysis.md  ADR-004-youtube-integration.md  ADR-005-match-data-integration.md  ADR-006-role-based-thresholds.md  ADR-007-html-report-generation.md  ADR-008-local-video-pipeline.md  ADR-009-first-run-onboarding.md  ADR-010-jungle-event-position-context.md  ADR-011-single-match-data-for-vod-analysis.md  ADR-012-adaptive-interval-and-momentum-compression.md  ADR-013-game-start-offset.md  ADR-014-weighted-screenshot-selection.md  ADR-015-focused-sampling-for-long-vod-analysis.md  README.md
lol_review/: .env.example  pyproject.toml
lol_review/src/: advisor.py  analyzer.py  cli.py  report.py  riot_client.py
lol_review/templates/: report.html
lol_review/tests/: test_advisor.py  test_analyzer.py  test_models.py  test_riot_client.py
lol_vod_analyzer/: pyproject.toml
lol_vod_analyzer/scripts/: analyze_video_direct.py
lol_vod_analyzer/src/lol_vod_analyzer/: analyzer.py  fetcher.py  local_video.py  main.py  report.py
lol_vod_analyzer/templates/: report.html
lol_vod_analyzer/tests/: conftest.py  test_analyzer.py  test_fetcher.py  test_models.py  test_report.py
skills/adr/: SKILL.md
skills/lol-advice/: SKILL.md
src/lol_tools/: cli.py  (+1 more)
tests/: test_cli.py  test_onboarding_messages.py
(+14 files in other folders)
